<?xml version="1.0"?>
<package format="2">
  <name>PCL</name>
  <version>1.8.1</version>
  <description>The Point Cloud Library (or PCL) for point cloud processing - development
    The PCL framework contains numerous state-of-the art algorithms including
    filtering, feature estimation, surface reconstruction, registration, model
    fitting and segmentation.</description>
  <license>BSD</license>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <author>Open Perception</author>
  <license>BSD</license>

  <url type="website">http://www.pointclouds.org</url>
  <url type="bugtracker">http://dev.pointclouds.org</url>
  <url type="repository">https://github.com/PointCloudLibrary/pcl</url>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>libboost-all-dev</depend>
  <depend>libeigen3-dev</depend>
  <depend>libflann-dev</depend>
  <depend>libqhull-dev</depend>
  <depend>libvtk6-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
